--- a/index.html
+++ b/index.html
@@ -17,34 +17,33 @@
 
 <body>
 
-    <div id="main-container">
+    <div class="main__container">
+        <div class="main__row">
 
-        <div id="dashboard">
-
-            <!-- Nav Container -->
-            <div id="nav-container">
-
-                <!-- Nav -->
+            <div class="nav__column">
                 <div class="nav">
 
-                    <!-- Nav Profile -->
                     <div class="profile">
-                        <img src="img/image-jeremy.png" alt="Profile Image" class="profile__img" width="60" height="60">
-                        <p class="profile__subtitle">Report for</p>
-                        <h1 class="profile__title">Jeremy Robson</h1>
+                        <img src="img/image-jeremy.png" alt="Profile image" class="profile__img">
+                        <div class="profile__title">
+                            <small class="profile__title--small">Report for</small>
+                            <div class="profile__title--head">
+                                <h1 class="profile__name">Jeremy Robson</h1>
+                            </div>
+                        </div>
+
                     </div>
 
-                    <!-- Nav Panel -->
-                    <div class="nav__panel">
+                    <div class="map">
                         <ul class="list">
                             <li class="list__item">
-                                <a href="#" class="lits__link">Daily</a>
+                                <a href="#" class="list__link">Daily</a>
                             </li>
                             <li class="list__item">
-                                <a href="#" class="lits__link">Weekly</a>
+                                <a href="#" class="list__link">Weekly</a>
                             </li>
                             <li class="list__item">
-                                <a href="#" class="lits__link">Monthly</a>
+                                <a href="#" class="list__link">Monthly</a>
                             </li>
                         </ul>
                     </div>
@@ -52,18 +51,11 @@
                 </div>
             </div>
 
-            <!-- Menu Container -->
-            <div id="menu-container">
+            <div class="menu__column">
 
-                <!-- Menu -->
-                <div class="menu">
-                    B
-                </div>
-                
             </div>
 
         </div>
-
     </div>
 
     <!-- JS -->
