--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
     <div class="main__container">
         <div class="main__row">
 
+            <!-- Nav Column -->
             <div class="nav__column">
+
+                <!-- Nav -->
                 <div class="nav">
 
+                    <!-- Nav section 1: Profile -->
                     <div class="profile">
                         <img src="img/image-jeremy.png" alt="Profile image" class="profile__img">
                         <div class="profile__title">
@@ -31,9 +35,9 @@
                                 <h1 class="profile__name">Jeremy Robson</h1>
                             </div>
                         </div>
-
                     </div>
 
+                    <!-- Nav section 2: Map -->
                     <div class="map">
                         <ul class="list">
                             <li class="list__item">
@@ -49,10 +53,28 @@
                     </div>
 
                 </div>
+
             </div>
 
+            <!-- Menu Column -->
             <div class="menu__column">
 
+                <!-- Menu -->
+                <div class="menu">
+
+                    <div class="menu__work">
+                        <div class="menu__title">
+                            <p class="menu__name">Work</p>
+                            <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots"></a></i>
+                        </div>
+                        <div class="menu__body">
+                            <p class="menu__hour">32hrs</p>
+                            <p class="menu__last">Last Week - 36hrs</p>
+                        </div>
+                    </div>
+
+                </div>
+            
             </div>
 
         </div>
