--- a/index.html
+++ b/index.html
@@ -62,19 +62,104 @@
                 <!-- Menu -->
                 <div class="menu">
 
+                    <!-- Menu WORK -->
                     <div class="menu__work">
-                        <div class="menu__title">
-                            <p class="menu__name">Work</p>
-                            <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots"></a></i>
+                        <div class="menu__cover"></div>
+
+                        <div class="menu__content">
+                            <div class="menu__title">
+                                <p class="menu__name">Work</p>
+                                <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
+                            </div>
+                            <div class="menu__body">
+                                <p class="menu__hour">32hrs</p>
+                                <p class="menu__last">Last Week - 36hrs</p>
+                            </div>
                         </div>
-                        <div class="menu__body">
-                            <p class="menu__hour">32hrs</p>
-                            <p class="menu__last">Last Week - 36hrs</p>
+                    </div>
+
+                    <!-- Menu PLAY -->
+                    <div class="menu__play">
+                        <div class="menu__cover"></div>
+
+                        <div class="menu__content">
+                            <div class="menu__title">
+                                <p class="menu__name">Play</p>
+                                <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
+                            </div>
+                            <div class="menu__body">
+                                <p class="menu__hour">10hrs</p>
+                                <p class="menu__last">Last Week - 8hrs</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Menu STUDY -->
+                    <div class="menu__study">
+                        <div class="menu__cover"></div>
+
+                        <div class="menu__content">
+                            <div class="menu__title">
+                                <p class="menu__name">Study</p>
+                                <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
+                            </div>
+                            <div class="menu__body">
+                                <p class="menu__hour">4hrs</p>
+                                <p class="menu__last">Last Week - 7hrs</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Menu EXERCISE -->
+                    <div class="menu__exercise">
+                        <div class="menu__cover"></div>
+
+                        <div class="menu__content">
+                            <div class="menu__title">
+                                <p class="menu__name">Exercise</p>
+                                <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
+                            </div>
+                            <div class="menu__body">
+                                <p class="menu__hour">4hrs</p>
+                                <p class="menu__last">Last Week - 5hrs</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Menu SOCIAL -->
+                    <div class="menu__social">
+                        <div class="menu__cover"></div>
+
+                        <div class="menu__content">
+                            <div class="menu__title">
+                                <p class="menu__name">Social</p>
+                                <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
+                            </div>
+                            <div class="menu__body">
+                                <p class="menu__hour">5hrs</p>
+                                <p class="menu__last">Last Week - 10hrs</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Menu Self Care -->
+                    <div class="menu__selfCare">
+                        <div class="menu__cover"></div>
+
+                        <div class="menu__content">
+                            <div class="menu__title">
+                                <p class="menu__name">Work</p>
+                                <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
+                            </div>
+                            <div class="menu__body">
+                                <p class="menu__hour">2hrs</p>
+                                <p class="menu__last">Last Week - 2hrs</p>
+                            </div>
                         </div>
                     </div>
 
                 </div>
-            
+
             </div>
 
         </div>
