Add: v4/Problem JS

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
-                                <p class="menu__hour">32hrs</p>
-                                <p class="menu__last">Last Week - 36hrs</p>
+                                <p class="menu__hour"><span class="hours">32</span>hrs</p>
+                                <p class="menu__last">Last Week - <span class="last-hours">36</span>hrs</p>
                             </div>
                         </div>
                     </div>
@@ -88,8 +88,8 @@
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
-                                <p class="menu__hour">10hrs</p>
-                                <p class="menu__last">Last Week - 8hrs</p>
+                                <p class="menu__hour"><span class="hours">10</span>hrs</p>
+                                <p class="menu__last">Last Week - <span class="last-hours">8</span>hrs</p>
                             </div>
                         </div>
                     </div>
@@ -104,8 +104,8 @@
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
-                                <p class="menu__hour">4hrs</p>
-                                <p class="menu__last">Last Week - 7hrs</p>
+                                <p class="menu__hour"><span class="hours">4</span>hrs</p>
+                                <p class="menu__last">Last Week - <span class="last-hours">7</span>hrs</p>
                             </div>
                         </div>
                     </div>
@@ -120,8 +120,8 @@
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
-                                <p class="menu__hour">4hrs</p>
-                                <p class="menu__last">Last Week - 5hrs</p>
+                                <p class="menu__hour"><span class="hours">4</span>hrs</p>
+                                <p class="menu__last">Last Week - <span class="last-hours">5</span>hrs</p>
                             </div>
                         </div>
                     </div>
@@ -136,8 +136,8 @@
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
-                                <p class="menu__hour">5hrs</p>
-                                <p class="menu__last">Last Week - 10hrs</p>
+                                <p class="menu__hour"><span class="hours">5</span>hrs</p>
+                                <p class="menu__last">Last Week - <span class="last-hours">10</span>hrs</p>
                             </div>
                         </div>
                     </div>
@@ -152,8 +152,8 @@
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
-                                <p class="menu__hour">2hrs</p>
-                                <p class="menu__last">Last Week - 2hrs</p>
+                                <p class="menu__hour"><span class="hours">2</span>hrs</p>
+                                <p class="menu__last">Last Week - <span class="last-hours">2</span>hrs</p>
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
     </div>
 
     <!-- JS -->
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
