Update: v5 / Get data

--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
                 <!-- Menu -->
                 <div class="menu">
 
-                    <!-- Menu WORK -->
+                    <!--
+                    Menu WORK
                     <div class="menu__work">
                         <div class="menu__cover"></div>
 
                         <div class="menu__content">
                             <div class="menu__title">
-                                <p class="menu__name">Work</p>
+                                <p class="menu__name"></p>
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
@@ -78,13 +79,13 @@
                         </div>
                     </div>
 
-                    <!-- Menu PLAY -->
+                    Menu PLAY
                     <div class="menu__play">
                         <div class="menu__cover"></div>
 
                         <div class="menu__content">
                             <div class="menu__title">
-                                <p class="menu__name">Play</p>
+                                <p class="menu__name"></p>
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
@@ -94,13 +95,13 @@
                         </div>
                     </div>
 
-                    <!-- Menu STUDY -->
+                    Menu STUDY
                     <div class="menu__study">
                         <div class="menu__cover"></div>
 
                         <div class="menu__content">
                             <div class="menu__title">
-                                <p class="menu__name">Study</p>
+                                <p class="menu__name"></p>
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
@@ -110,13 +111,13 @@
                         </div>
                     </div>
 
-                    <!-- Menu EXERCISE -->
+                    Menu EXERCISE
                     <div class="menu__exercise">
                         <div class="menu__cover"></div>
 
                         <div class="menu__content">
                             <div class="menu__title">
-                                <p class="menu__name">Exercise</p>
+                                <p class="menu__name"></p>
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
@@ -126,13 +127,13 @@
                         </div>
                     </div>
 
-                    <!-- Menu SOCIAL -->
+                    Menu SOCIAL
                     <div class="menu__social">
                         <div class="menu__cover"></div>
 
                         <div class="menu__content">
                             <div class="menu__title">
-                                <p class="menu__name">Social</p>
+                                <p class="menu__name"></p>
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
@@ -142,13 +143,13 @@
                         </div>
                     </div>
 
-                    <!-- Menu Self Care -->
+                    Menu Self Care
                     <div class="menu__selfCare">
                         <div class="menu__cover"></div>
 
                         <div class="menu__content">
                             <div class="menu__title">
-                                <p class="menu__name">Work</p>
+                                <p class="menu__name"></p>
                                 <i><a href="#"><img src="img/icon-ellipsis.svg" alt="Dots" class="menu__icon"></a></i>
                             </div>
                             <div class="menu__body">
@@ -157,6 +158,7 @@
                             </div>
                         </div>
                     </div>
+                -->
 
                 </div>
 
