--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
     </div>
 
     <!-- JS -->
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
